--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
 
+html,
 body {
-    margin: 0;
-    padding: 0;
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  background-color: #eff3f8;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
 }
