--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -146,7 +146,14 @@
                   ></p-fileUpload>
                 </div>
               </div>
-              <div class="col-12 mt-5 ml-4">
+              <div
+                class="col-12 flex"
+                [ngClass]="
+                  isLoading
+                    ? 'justify-content-center'
+                    : 'justify-content-end'
+                "
+              >
                 <button
                   pButton
                   style="
@@ -155,7 +162,7 @@
                     top: -53.7px;
                     left: -26.7px;
                   "
-                  class="mt-3 w-auto"
+                  class="w-auto"
                   color="primary"
                   [disabled]="signupForm.invalid"
                   (click)="onSubmit()"
