Routing not working

--- a/src/app/pages/activity/activity.component.html
+++ b/src/app/pages/activity/activity.component.html
@@ -1,1 +1,243 @@
-<p>activity works!</p>
+<div class="min-h-screen flex flex-column surface-ground">
+  <div class="surface-overlay py-1 px-6 text-center relative lg:static">
+    <h2 class="mr-0 lg:mr-6 font-semibold text-xl md:text-3xl">
+      Upload Your Activity Here!
+    </h2>
+  </div>
+  <div class="flex relative lg:static p-5 flex-auto">
+    <div
+      id="app-sidebar-12"
+      class="surface-card lg:block flex-shrink-0 absolute lg:static left-0 top-0 z-1 select-none shadow-2 hidden"
+      style="width: 280px; border-radius: 12px"
+    >
+      <div class="flex flex-column h-full">
+        <div class="overflow-y-auto">
+          <ul class="list-none px-3 pb-3 pt-0 m-0">
+            <li>
+              <div
+                class="p-3 flex align-items-center justify-content-between text-600"
+              >
+                <span class="font-medium text-sm text-900 mt-2"
+                  >ACTIVITY LIST</span
+                >
+              </div>
+              <ul class="list-none p-0 m-0 overflow-hidden">
+                <li>
+                  <a
+                    pripple=""
+                    routerLink="paper"
+                    class="p-ripple p-element flex align-items-center cursor-pointer p-3 text-700 hover:surface-100 transition-duration-150 transition-colors border-right-2 border-transparent"
+                  >
+                    <i class="pi pi-file mr-2"></i>
+                    <span class="font-medium">Paper Presentation</span>
+                    <span
+                      class="p-ink"
+                      style="
+                        height: 248px;
+                        width: 248px;
+                        top: -119px;
+                        left: -6px;
+                      "
+                    ></span>
+                  </a>
+                </li>
+                <li>
+                  <a
+                    pripple=""
+                    routerLink="project"
+                    class="p-ripple p-element flex align-items-center cursor-pointer p-3 text-700 hover:surface-100 transition-duration-150 transition-colors border-right-2 border-transparent"
+                  >
+                    <i class="pi pi-cog mr-2"></i>
+                    <span class="font-medium">Project Presentation</span>
+                    <span
+                      class="p-ink"
+                      style="
+                        height: 248px;
+                        width: 248px;
+                        top: -114px;
+                        left: 4px;
+                      "
+                    ></span>
+                  </a>
+                </li>
+                <li>
+                  <a
+                    pripple=""
+                    routerLink="club"
+                    class="p-ripple p-element flex align-items-center cursor-pointer p-3 text-700 hover:surface-100 transition-duration-150 transition-colors border-right-2 border-transparent"
+                  >
+                    <i class="pi pi-users mr-2"></i>
+                    <span class="font-medium">Club</span>
+                    <span
+                      class="p-ink"
+                      style="
+                        height: 248px;
+                        width: 248px;
+                        top: -88px;
+                        left: 32px;
+                      "
+                    ></span>
+                  </a>
+                </li>
+                <li>
+                  <a
+                    pripple=""
+                    routerLink="workshop"
+                    class="p-ripple p-element flex align-items-center cursor-pointer p-3 text-700 hover:surface-100 transition-duration-150 transition-colors border-right-2 border-transparent"
+                  >
+                    <i class="pi pi-th-large mr-2"></i>
+                    <span class="font-medium">Workshop</span>
+                    <span
+                      class="p-ink"
+                      style="
+                        height: 248px;
+                        width: 248px;
+                        top: -95px;
+                        left: 42px;
+                      "
+                    ></span>
+                  </a>
+                </li>
+                <li>
+                  <a
+                    pripple=""
+                    routerLink="nptel"
+                    class="p-ripple p-element flex align-items-center cursor-pointer p-3 text-700 hover:surface-100 transition-duration-150 transition-colors border-right-2 border-transparent"
+                  >
+                    <i class="pi pi-folder-open mr-2"></i>
+                    <span class="font-medium">NPTEL</span>
+                    <span
+                      class="p-ink"
+                      style="
+                        height: 248px;
+                        width: 248px;
+                        top: -85px;
+                        left: 28px;
+                      "
+                    >
+                    </span>
+                  </a>
+                </li>
+                <li>
+                  <a
+                    pripple=""
+                    routerLink="vac"
+                    class="p-ripple p-element flex align-items-center cursor-pointer p-3 text-700 hover:surface-100 transition-duration-150 transition-colors border-right-2 border-transparent"
+                  >
+                    <i class="pi pi-folder-open mr-2"></i>
+                    <span class="font-medium">Value Added Course</span>
+                    <span
+                      class="p-ink"
+                      style="
+                        height: 248px;
+                        width: 248px;
+                        top: -85px;
+                        left: 28px;
+                      "
+                    >
+                    </span>
+                  </a>
+                </li>
+                <li>
+                  <a
+                    pripple=""
+                    routerLink="techno-managerial"
+                    class="p-ripple p-element flex align-items-center cursor-pointer p-3 text-700 hover:surface-100 transition-duration-150 transition-colors border-right-2 border-transparent"
+                  >
+                    <i class="pi pi-slack mr-2"></i>
+                    <span class="font-medium">Techo Managerial Events</span>
+                    <span class="p-ink"></span>
+                  </a>
+                </li>
+                <li>
+                  <a
+                    pripple=""
+                    routerLink="placement"
+                    class="p-ripple p-element flex align-items-center cursor-pointer p-3 text-700 hover:surface-100 transition-duration-150 transition-colors border-right-2 border-transparent"
+                  >
+                    <i class="pi pi-desktop mr-2"></i>
+                    <span class="font-medium">Placement</span>
+                    <span class="p-ink"></span>
+                  </a>
+                </li>
+                <li>
+                  <a
+                    pripple=""
+                    routerLink="intern"
+                    class="p-ripple p-element flex align-items-center cursor-pointer p-3 text-700 hover:surface-100 transition-duration-150 transition-colors border-right-2 border-transparent"
+                  >
+                    <i class="pi pi-envelope mr-2"></i>
+                    <span class="font-medium">Internship</span>
+                    <span class="p-ink"></span>
+                  </a>
+                </li>
+                <li>
+                  <a
+                    pripple=""
+                    routerLink="ncc-nss"
+                    class="p-ripple p-element flex align-items-center cursor-pointer p-3 text-700 hover:surface-100 transition-duration-150 transition-colors border-right-2 border-transparent"
+                  >
+                    <i class="pi pi-inbox mr-2"></i>
+                    <span class="font-medium">NCC / NSS</span>
+                    <span class="p-ink"></span>
+                  </a>
+                </li>
+                <li>
+                  <a
+                    pripple=""
+                    routerLink="project-paper"
+                    class="p-ripple p-element flex align-items-center cursor-pointer p-3 text-700 hover:surface-100 transition-duration-150 transition-colors border-right-2 border-transparent"
+                  >
+                    <i class="pi pi-briefcase mr-2"></i>
+                    <span class="font-medium">Project to Paper</span>
+                    <span class="p-ink"></span>
+                  </a>
+                </li>
+                <li>
+                  <a
+                    pripple=""
+                    routerLink="sports"
+                    class="p-ripple p-element flex align-items-center cursor-pointer p-3 text-700 hover:surface-100 transition-duration-150 transition-colors border-right-2 border-transparent"
+                  >
+                    <i class="pi pi-cog mr-2"></i>
+                    <span class="font-medium">Sports</span>
+                    <span class="p-ink"></span>
+                  </a>
+                </li>
+                <li>
+                  <a
+                    pripple=""
+                    routerLink="voluntary"
+                    class="p-ripple p-element flex align-items-center cursor-pointer p-3 text-700 hover:surface-100 transition-duration-150 transition-colors border-right-2 border-transparent"
+                  >
+                    <i class="pi pi-cog mr-2"></i>
+                    <span class="font-medium">Voluntary Works</span>
+                    <span class="p-ink"></span>
+                  </a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+        <div class="mt-auto border-top-1 surface-border text-center">
+          <a
+            pripple=""
+            (click)="location.back()"
+            class="p-ripple p-element cursor-pointer p-3 inline-flex align-items-center justify-content-center text-pink-600 text-600 transition-colors transition-duration-150"
+          >
+            <i class="pi pi-chevron-circle-left mr-2"></i>
+            <span class="font-medium">Go Back</span>
+            <span class="p-ink"></span>
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="flex flex-column flex-auto">
+      <div
+        class="border-2 border-dashed surface-border border-round surface-section flex-auto lg:ml-5"
+      >
+        <router-outlet name="activitiesRoute"></router-outlet>
+      </div>
+    </div>
+  </div>
+</div>
